# exchange_volume_bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backpack/: trader.py
data/: private_keys.txt  proxies.txt  public_keys.txt
enums/: request_enums.py
utils/: balancer.py  helpers.py
