[tool.poetry]
name = "backpack-bot"
version = "0.1.0"
description = ""
authors = ["sndmndss <yanfedorov120505@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.3"
cryptography = "^42.0.5"
loguru = "^0.7.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
